Address review feedback from mskacelik
- Replace .collect(Collectors.toList()) with .toList() (JDK 17+)
- Add missing imports in ResponseImpl and JsonbAnnotationIntrospectorTest
- Use property for jakarta.json.bind-api version instead of hardcoding